[package]
name = "gainer"
version = "0.1.0"
edition = "2021"
authors = ["gwirn"]
license = "MIT"
description = "Shows which git branch you are in"
readme = "README.md"
repository = "https://github.com/gwirn/gainer"
keywords = ["git", "git-branch"]
categories = ["git"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
